[gd_scene load_steps=6 format=3 uid="uid://b5yra45ke54u7"]

[ext_resource type="Script" path="res://examples/scenes/3d/player/Player.gd" id="1_ie5h1"]
[ext_resource type="Script" path="res://addons/interaction_system/systems/interaction/interactor/character_body_3d_interactor.gd" id="2_1ersv"]
[ext_resource type="Script" path="res://examples/scenes/3d/player/UI.gd" id="3_yr7h0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0f17r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0a8oh"]
size = Vector3(10, 2, 10)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ie5h1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0f17r")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_0a8oh")

[node name="CharacterBody3DInteractor" type="Node3D" parent="." node_paths=PackedStringArray("ray_cast", "area")]
script = ExtResource("2_1ersv")
action_name = "interact"
ray_cast = NodePath("../Camera3D/RayCast3D")
area = NodePath("../Area3D")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_yr7h0")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Focus" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Focused on <null>."

[node name="Closest" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Closest to <null>."

[node name="Interact" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Interacted with <null>."

[node name="Timer" type="Timer" parent="Control"]
wait_time = 3.0
one_shot = true

[connection signal="closest_interactable" from="CharacterBody3DInteractor" to="Control" method="_on_character_body_3d_interactor_closest_interactable"]
[connection signal="focused_on_interactable" from="CharacterBody3DInteractor" to="Control" method="_on_character_body_3d_interactor_focused_on_interactable"]
[connection signal="interacted_with_interactable" from="CharacterBody3DInteractor" to="Control" method="_on_character_body_3d_interactor_interacted_with_interactable"]
[connection signal="not_closest_interactable" from="CharacterBody3DInteractor" to="Control" method="_on_character_body_3d_interactor_not_closest_interactable"]
[connection signal="unfocused_interactable" from="CharacterBody3DInteractor" to="Control" method="_on_character_body_3d_interactor_unfocused_interactable"]
[connection signal="timeout" from="Control/Timer" to="Control" method="_on_timer_timeout"]
